# sentiment-analysis

./: .gitignore  Architecture.md  Boundaries.md  Decisions.md  Deployment.md  Design.md  Memory.md  PROJECT.md  Phases.md  ProjectRequirement.md  README.md  Rules.md  generate_large_csv.py  package-lock.json  poll_test.py
backend/: .env.example  .gitignore  config.py  database.py  logger.py  main.py  models.py  pyproject.toml  requirements.txt  samconfig.toml  startup_check.py  template.yaml
backend/deploy/: samconfig.toml  template.yaml
backend/routers/: batches.py  categories.py  issues.py  reviews.py  trends.py  upload.py
backend/scripts/: export_corrections.py  rebuild_aggregates.py
backend/services/: batch_processor.py  lambda_client.py
backend/src/: cache.py  config.py  database.py  lambda_handler.py  main.py  startup_check.py
backend/src/routers/: batches.py  corrections.py  issues.py  reviews.py  trends.py  upload.py
backend/src/services/: batch_processor.py  lambda_client.py  text_preprocessing.py
backend/tests/: conftest.py  test_batch_processor.py  test_batches.py  test_categories.py  test_filter_regression.py  test_health.py  test_issues.py  test_reviews.py  test_text_preprocessing.py  test_trends.py  test_upload.py
frontend/: convert_oklch.mjs  index.html  package-lock.json  package.json
lambda/: handler.py
ml/: asymmetric_threshold_test.py  colab_embed.py  combined_training_test.py  compare_issue_clustering.py  confidence_threshold_test.py  error_review.py  evaluate_v4_and_frozen.py  export_for_lambda.py  export_mlp_and_clusters.py  (+25 more)
(+61 files in other folders)
