[project]
name = "backend"
version = "0.1.0"
description = "AI Customer Review Analytics Platform — FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "boto3>=1.35",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.4",
    "redis[hiredis]>=5.0",
    "numpy>=2.5.1",
    "onnxruntime>=1.27.0",
    "tokenizers>=0.23.1",
    "mangum>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "moto[dynamodb,s3]>=5.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
